--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -13,7 +13,8 @@
         android:text="Welcome! This is setting fragment" />
 
     <Button
-        android:text="3"
+        android:id="@+id/btLogout"
+        android:text="logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
