--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.Login.LoginActivity"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    tools:context=".UI.Login.LoginActivity">
 
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -47,8 +47,8 @@
                 android:id="@+id/etUserId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="17dp"
-                android:inputType="text"/>
+                android:inputType="text"
+                android:textSize="17dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -66,8 +66,8 @@
                 android:id="@+id/etUserPwd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="17dp"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword"
+                android:textSize="17dp" />
         </LinearLayout>
 
         <Button
@@ -75,6 +75,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="LOGIN" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <CheckBox
+                android:id="@+id/cbAutoLogin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="AUTO LOGIN"/>
+
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
