--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.Login.LoginActivity"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    tools:context=".UI.Login.LoginActivity">
 
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -47,8 +47,8 @@
                 android:id="@+id/etUserId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="17dp"
-                android:inputType="text"/>
+                android:inputType="text"
+                android:textSize="17dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -66,16 +66,48 @@
                 android:id="@+id/etUserPwd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="17dp"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword"
+                android:textSize="17dp" />
         </LinearLayout>
 
-        <Button
-            android:id="@+id/btLogin"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="LOGIN" />
+            android:layout_height="wrap_content">
 
+            <Button
+                android:id="@+id/btEmailLogin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="EMAIL LOGIN" />
+
+            <Button
+                android:id="@+id/btAnonymousLogin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ANONYMOUS LOGIN" />
+            <Button
+                android:id="@+id/btSignUp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="sign up"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <CheckBox
+                android:id="@+id/cbAutoLogin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="AUTO LOGIN" />
+
+        </LinearLayout>
     </LinearLayout>
 
 
