--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -5,27 +5,8 @@
     android:orientation="vertical"
     tools:context="com.example.alex.dg_chatbot.UI.Main.settings.SettingFragment">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="#ffffff"
-        android:elevation="2dp">
 
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/chatbot_logo_sample" />
 
-        <ImageView
-
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:src="@drawable/settings_character"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true" />
-    </RelativeLayout>
 
     <Button
         android:id="@+id/btLogout"
@@ -34,19 +15,28 @@
         android:text="logout"
         android:visibility="gone" />
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tvEmailID"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:text="abbcccdddd@dongguk.edu" />
-    </LinearLayout>
+
+
+        <ImageView
+
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:src="@drawable/settings_character"
+            android:layout_gravity="right"/>
+
+    </FrameLayout>
 
     <View
         android:layout_width="match_parent"
@@ -162,6 +152,36 @@
             android:layout_height="wrap_content"
             android:textSize="17dp"
             android:text="앱 정보"
+            android:textColor="#666666"/>
+
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#dadada"/>
+
+    <LinearLayout
+        android:id="@+id/llFavorite"
+        android:layout_width="match_parent"
+        android:layout_height="70dp">
+
+        <ImageView
+            android:layout_gravity="center"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/favorite"/>
+
+
+        <TextView
+            android:layout_marginLeft="20dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="17dp"
+            android:text="Favorite 설정"
             android:textColor="#666666"/>
 
 
