--- a/app/src/main/res/layout/msglist.xml
+++ b/app/src/main/res/layout/msglist.xml
@@ -32,17 +32,12 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <ImageView
+            <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="100dp" />
-            
-            <TextView
-                android:text=""
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content"/>
 
         </LinearLayout>
-        
+
 
 
     </LinearLayout>
